    + Ajout d'un module de debug mémoire si l'option DEBUG est activée
    + Utilisation de PDO pour créer les connexions aux bases de données pour la partie calendrier
    + Optimisation des requettes de la partie logs
    + Utilisation de la commande mysqldump pour export au format csv les données des bases
    + Passage au connecteur php PDO au lieu de JDatabase pour les requettes SQL

-- Yann Genevois <yann.genevois@gmail.com> Tue Apr  9 09:24:50 CEST 2013


Cultibox (1.1.12) precise; urgency=low
    + Le choix du capteur n'apparait plus pour les types 'autre' et 'lampe'
    + Correction d'un bug javascript: on ne recherche plus les éléments de la seconde régulation si celle-ci est désactivée
    + Correction du fichier update_sql.sql (il manquait deux ;)
    + Modification de la commande d'update de la base sous max: on utilise l'option -f pour forcer le script à continuer
    + Correction pour le changement de numéro de version en upgrade sur les plateformes mac et linux
    + Ouverture de l'aide dans un nouvel onglet
    + Correction des trous de l'affichage des logs paramètré à 10 fois la fréquence d'enregistrement
    + Correction sur la gestion des programmes: boucle infini si le repeat time est à 0 corrigé + correction sur le dernier élément d'un ajout cyclique qui se retrouvait vide
    + Correction d'un appel de fonction erroné pour l'importation des logs de puissance
    + Lorsqu'on charge les fichiers de log on authorise une ligne vide, à la ligneuxième ligne vide on ferme le fichier et on passe au suivant
    + Les données éronnées dans les fichiers de logs n'empèchent pas de poursuivre la lecture des autres lignes à la recherche d'autres données valides
    + Ajout du selecteur de langue pour joomla et des langues: espagnol, italien et allemand
    + Modification de l'affichage des puissances pour prendre en compte les extrapolations

-- Yann Genevois <yann.genevois@gmail.com> Wed Apr  3 11:32:52 CEST 2013


Cultibox (1.1.11) precise; urgency=low