@@ -14,6 +14,7 @@ Cultibox (1.1.13) precise; urgency=low
     + Optimisation des requettes de la partie logs
     + Utilisation de la commande mysqldump pour export au format csv les données des bases
     + Passage au connecteur php PDO au lieu de JDatabase pour les requettes SQL
+    + Ajout et debug de fichiers XML pour le calendrier lunaire
 
 -- Yann Genevois <yann.genevois@gmail.com> Tue Apr  9 09:24:50 CEST 2013
 
